--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
-<!-- <h1>Welcome {{ title }}</h1>
-
-<ul>
-  <li *ngFor="let product of products"> {{product.productName}} </li>
-</ul> -->
-<app-navi></app-navi>
-<app-category></app-category>
-<app-product></app-product>
-<router-outlet></router-outlet>
+<div class="container">
+  <app-navi></app-navi>
+  <div class="row">
+    <div class="col-md-3">
+      <app-brand></app-brand>
+    </div>
+    <div class="col-md-9">
+      <app-car></app-car>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
+</div>
