--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,4 +1,12 @@
+<div
+  *ngIf="dataLoaded == false"
+  class="spinner-border text-primary"
+  role="status"
+>
+  <span class="visually-hidden">Loading...</span>
+</div>
 <ul class="list-group">
-    <li class="list-group-item">An item</li>
-    
-  </ul>
+  <li class="list-group-item" *ngFor="let brand of brands">
+    {{ brand.brandName }}
+  </li>
+</ul>
