--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,4 +1,22 @@
-<table class="table">
+<div
+  *ngIf="dataLoaded == false"
+  class="spinner-border text-primary"
+  role="status"
+>
+  <span class="visually-hidden">Loading...</span>
+</div>
+<table *ngIf="dataLoaded == true" class="table">
+  <thead>
+    <tr>
+      <th>Id</th>
+      <th>Marka Id</th>
+      <th>Model Id</th>
+      <th>Color Id</th>
+      <th>Model Yılı</th>
+      <th>Fiyatı</th>
+      <th>Açıklama</th>
+    </tr>
+  </thead>
   <tr *ngFor="let car of cars">
     <td>{{ car.id }}</td>
     <td>{{ car.brandId }}</td>
