--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -9,7 +9,7 @@
   <thead>
     <tr>
       <th>Id</th>
-      <th>Marka Id</th>
+      <th>Marka Adı</th>
       <th>Model Id</th>
       <th>Color Id</th>
       <th>Model Yılı</th>
@@ -19,7 +19,7 @@
   </thead>
   <tr *ngFor="let car of cars">
     <td>{{ car.id }}</td>
-    <td>{{ car.brandId }}</td>
+    <td>{{ car.brandName }}</td>
     <td>{{ car.modelId }}</td>
     <td>{{ car.colorId }}</td>
     <td>{{ car.modelYear }}</td>
