--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -5,7 +5,7 @@
 >
   <span class="visually-hidden">Loading...</span>
 </div>
-<ul class="list-group">
+<ul class="list-group" style="margin-top: 20px;">
   <li
     routerLink="/brand/{{brand.brandId}}"
     (click)="setCurrentBrand(brand)"
