--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,12 @@
   <app-navi></app-navi>
   <div class="row">
     <div class="col-md-3">
-      <app-brand></app-brand>
+      <app-filter-content></app-filter-content>
+      <app-color></app-color>
     </div>
     <div class="col-md-9">
       <router-outlet></router-outlet>
     </div>
   </div>
-  
+
 </div>
