--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -6,14 +6,32 @@
   <span class="visually-hidden">Loading...</span>
 </div>
 
-<ul class="list-group" style="margin-top: 20px;">
-  <li (click)="setCurrentBrand(null)"  [class]="getCurrentBrandClass(null)" routerLink=""> Tüm Araçlar </li>
-  <li
-    routerLink="/brand/{{brand.brandId}}"
-    (click)="setCurrentBrand(brand)"
-    [class]="getCurrentBrandClass(brand)"
-    *ngFor="let brand of brands"
-  >
-    {{ brand.brandName }}
-  </li>
-</ul>
+<!--<ul class="list-group" style="margin-top: 20px;">-->
+<!--  <li (click)="setCurrentBrand(null)"  [class]="getCurrentBrandClass(null)" routerLink=""> Tüm Araçlar </li>-->
+<!--  <li-->
+<!--    routerLink="/brand/{{brand.brandId}}"-->
+<!--    (click)="setCurrentBrand(brand)"-->
+<!--    [class]="getCurrentBrandClass(brand)"-->
+<!--    *ngFor="let brand of brands"-->
+<!--  >-->
+<!--    {{ brand.brandName }}-->
+<!--  </li>-->
+<!--</ul>-->
+
+<div style="margin-top: 20px" class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" routerLink=""
+            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+      Tüm Araçlar
+    </button>
+    <div id="flush-collapseOne" class="accordion-collapse collapse " aria-labelledby="flush-headingOne"
+         data-bs-parent="#accordionFlushExample">
+      <div class="card" *ngFor="let brand of brands" (click)="setCurrentBrand(brand)"
+           routerLink="/brand/{{brand.brandId}}">
+        <div class="card-body">
+          {{brand.brandName}}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
