--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,11 +1,11 @@
-<div style="margin-top: 20px" class="accordion accordion-flush" id="accordionExample">
+<div style="margin-top: 20px" class="accordion accordion-flush" id="accordion">
   <div class="accordion-item">
     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" routerLink=""
-            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            data-bs-target="#flush-collapse" aria-expanded="false" aria-controls="flush-collapse">
       Tüm Renkler
     </button>
-    <div id="flush-collapseOne" class="accordion-collapse collapse " aria-labelledby="flush-headingOne"
-         data-bs-parent="#accordionExample">
+    <div id="flush-collapse" class="accordion-collapse collapse " aria-labelledby="flush-headingOne"
+         data-bs-parent="#accordion">
       <div class="card" *ngFor="let color of colors" (click)="setCurrentColor(color)"
            routerLink="/color/{{color.colorId}}">
         <div class="card-body">
