--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -1,21 +1,32 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Anasayfa</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Arabalar</a>
-          </li>
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd;">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="">Rent A Car</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <form class="d-flex">
+            <div class="col-sm-10 me-2">
+              <input class="form-control " type="search" placeholder="Search" aria-label="Search">
+            </div>
+            <button class="btn btn-primary me-4 " type="submit">Search</button>
+          </form>
+        </li>
+      </ul>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item me-4">
           <app-cart-summary></app-cart-summary>
-
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success active" type="submit">Search</button>
-        </form>
-      </div>
+        </li>
+        <li class="nav-item me-2">
+          <a class="nav-link" routerLink="register">Kayıt Ol</a>
+        </li>
+        <li class="nav-item me-4">
+          <a class="nav-link" routerLink="login">Giriş Yap</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
