--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -20,7 +20,7 @@
 
 <div style="margin-top: 20px" class="accordion accordion-flush" id="accordionFlushExample">
   <div class="accordion-item">
-    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" routerLink=""
+    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" routerLink="cars"
             data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
       Tüm Araçlar
     </button>
