--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,6 +1,6 @@
 <div style="margin-top: 20px" class="accordion accordion-flush" id="accordion">
   <div class="accordion-item">
-    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" routerLink=""
+    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" routerLink="cars"
             data-bs-target="#flush-collapse" aria-expanded="false" aria-controls="flush-collapse">
       Tüm Renkler
     </button>
