--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -1,30 +1,30 @@
-<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="">Rent A Car</a>
+    <a class="navbar-brand ms-4" routerLink=""><img src="../../../assets/logo.svg" alt="Rent Go | Türkiye'nin Araç Kiralama Şirketi"
+                                      style="width: 150px;height: 75px;" > </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <form class="d-flex">
-            <div class="col-sm-10 me-2">
-              <input class="form-control " type="search" placeholder="Search" aria-label="Search">
-            </div>
-            <button class="btn btn-primary me-4 " type="submit">Search</button>
-          </form>
+        <li class="nav-item me-2">
+          <a class="nav-link h5 fw-bold" routerLink="cars">Araçlar</a>
         </li>
-      </ul>
-      <ul class="navbar-nav ms-auto">
+        <li class="nav-item me-2">
+          <a class="nav-link h5 fw-bold" routerLink="about">Hakkımızda</a>
+        </li>
         <li class="nav-item me-4">
           <app-cart-summary></app-cart-summary>
         </li>
-        <li class="nav-item me-2">
-          <a class="nav-link" routerLink="register">Kayıt Ol</a>
+        <li class="nav-item me-4" *ngIf="!checkUser">
+          <a class="nav-link h5" routerLink="account/login">Giriş Yap</a>
         </li>
-        <li class="nav-item me-4">
-          <a class="nav-link" routerLink="login">Giriş Yap</a>
+        <li class="nav-item me-2" *ngIf="!checkUser">
+          <a class="nav-link h5" routerLink="account/register">Kayıt Ol</a>
+        </li>
+        <li class="nav-item me-2" *ngIf="checkUser">
+          <a class="nav-link h5" (click)="logout()" href="">Çıkış Yap</a>
         </li>
       </ul>
     </div>
