--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,10 +6,10 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="5000">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="5000">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="5000">
       <img src="..." class="d-block w-100" alt="...">
